# cpp_alg

./: CMakeLists.txt  main.cpp
DataTypes/: field.cpp  matrix.cpp  matrix.h  vector.cpp
General/: dimensions.cpp  macro.h  structs.h
MPI/Decomposition/: decomposition.cpp  decomposition.h
Solver/: solver.cpp
System/: system.cpp
